# coding-agent-guardrails

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  README.zh-TW.md  install.ps1  install.sh
.github/workflows/: agentcam-publish.yml  agentcam.yml  corridor-ci-tag.yml  corridor-ci.yml  corridor.yml  guardrails-probe.yml  kiss.yml  policy-gate.yml  slime-coding.yml  toolkit.yml
.guardrails/: review.json
agentcam/: .gitattributes  .gitignore  CHANGELOG.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
agentcam/.github/workflows/: ci.yml
agentcam/docs/: design.md
agentcam/examples/risky-auth-change/: README.md  expected-report.md
agentcam/scripts/: build_demo.py
agentcam/src/agentbox/: __init__.py  cli.py  git_state.py  models.py  paths.py  report.py  runner.py  scanner.py
agentcam/src/agentcam/: __init__.py  cli.py  dependency_probe.py  export.py  git_state.py  hooks.py  models.py  paths.py  redaction.py  report.py  runner.py  scanner.py  verification.py
agentcam/tests/: cli_harness.py  conftest.py  test_capture.py  test_dependency_probe.py  test_e2e.py  test_export.py  test_git_state.py  test_handoff.py  test_hooks.py  test_paths.py  test_redaction.py  test_report.py  test_ruleset_provenance.py  test_runner.py  test_scanner.py  test_verify.py
corridor-ci/: README.md  action.yml
corridor-ci/docs/: HANDOFF_SPEC.md  MANIFESTO.md  RELEASING.md
corridor-ci/examples/: PULL_REQUEST_TEMPLATE.md  workflow.yml
corridor-ci/tests/: test_corridor_ci.py  test_review_artifact.py
docs/: MIGRATION.md
installer/: __init__.py  guardrails_installer.py
kiss-my-diff/: README.md
kiss-my-diff/benchmark/: README.md  benchmark_core.py  benchmark_runner.py  context-weighting-experiment.md  discipline-fusion-run.md  discipline-fusion-summary.md  one-line-kiss.md
kiss-my-diff/benchmark/tests/: test_benchmark_runner.py  test_discipline_snapshot.py
slime-coding/: CHANGELOG.md  CLAUDE.md  README.md  install-codex.ps1  install.sh
slime-coding/benchmark/: README.md
slime-coding/commands/: slime-corridor.md  slime-prune.md
slime-coding/docs/: CONCEPT.md  DESIGN.md
slime-coding/hooks/: codex.hooks.template.json  hooks.template.json
slime-coding/skills/slime-navigate/: SKILL.md
slime-coding/templates/.slime/: corridor.md
slime-coding/tests/: test-codex-install.ps1  test-commit-evidence.sh  test.sh  test_trusted_checks.py
templates/: DISCIPLINE.md
tests/: guardrails-probe-routine.txt  guardrails-probe-stale.txt  ruleset-block-probe.txt  test-install.ps1  test-install.sh  test_installer_core.py  test_low_friction_installer.py  test_low_friction_runtime.py  test_pr4_contract.py  toolkit_e2e.py
tests/fixtures/: corridor-v11-workflow.yml
(+2 files in other folders)
