[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "agentcam"
version = "0.2.0"
description = "Local-first CLI wrapper that records what your AI coding agent changed in your repo."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "shihchengwei", email = "shihchengwei@gmail.com" }]
keywords = [
    "coding-agent",
    "observability",
    "flight-recorder",
    "claude-code",
    "codex",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    # Windows ConPTY wrapper used by the ``pty_windows`` runner backend.
    # POSIX wheels do not exist for pywinpty; the marker keeps the
    # Linux/macOS install closure unchanged.
    'pywinpty>=2.0; sys_platform == "win32"',
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-timeout>=2.2",
]

[project.scripts]
agentcam = "agentcam.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentcam"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
timeout = 30
